test/files/pos/t10907.scala
object Test {
  val x = Seq(Vector(2), List(3))
}
