test/files/neg/t3763.scala
object Test extends Application {
  val x = Array(Array(1), List(1))
